--- a/refs.bib
+++ b/refs.bib
@@ -1,4 +1,4 @@
-@misc{wikipedia,
-  title = {Wikipedia},
-  url = {https://wikipedia.org/},
+@misc{cnc,
+  title = {Em 2025, cai o número de endividados, mas dívidas pesam mais na renda dos devedores},
+  url = {https://portaldocomercio.org.br/economia/em-2025-cai-o-numero-de-endividados-mas-dividas-pesam-mais-na-renda-dos-devedores/},
 }
